On the road to 2025.09:
Environment:
- updated IPXE to 20250829
- updated grub to 2.12.r359.g19c698d12
- systemd 258
- enabled firmware autodetection on -latest and local image
  --> 12% faster bootup on both media types :)
- added additional bash_completions
- added zsh completion
ISO:
- updated ISO grub config
- limit memory to 4G in UEFI MIX MODE to avoid NX issue
- switched to build ISO grub during image assembling
container:
- added firmware autodetection switch
manage:
- switched to kexec autodetection of supported mode
tools:
- removed archboot-bootloader.sh script
- removed archboot-qemu.sh script
iso.sh:
- cleanup and unify text messages
ipxe:
- fixed background image
server:
- update background image on upload
defaults:
- added _SPLASH option for custom uki splash
---
Highlights 2025.08:
- kernel 6.16.x
Environment:
- added systemd 258.x compatibility
- fixed tmpfiles not being created correctly
- updated getty and serial getty systemd service files
- removed custom systemd-user-session.service
- 3cpio 0.11.0
- removed bcachefs support
init:
- added loop module to manual module loading array
pacsetup:
- fixed download URL for mirrorlist
setup:
- fixed pacman secureboot hook
- removed bcachefs support
testsuite:
- speedup Wi-Fi routine
- speedup non tracked files routine
- removed bcachefs support
---
Highlights 2025.07:
- updated IPXE to 20250723
- updated bash to 5.3.x
testsuite:
- better firmware routine
---
Highlights 2025.06:
- kernel 6.15.x
Environment:
- added mmc-utils
- updated pacman mirrorlist
---
Highlights 2025.05:
- grub 2.12.r292.g73d1c959
- switch to Stripe as donation platform
testsuite:
- better loopback routine
---
Highlights 2025.04:
- kernel 6.14.x
- grub 2.12.r283.ga4da71da 
Environment:
- disabled WiFi powersave by default
- 3cpio 0.5.1
testsuite:
- speedup hwsim routine
network:
- added wireless regulatory domain configuration
setup:
- added wireless regulatory domain to autoconfiguration