@@ -134,18 +134,23 @@ _run_autorun() {
         done
     fi
     if [[ -f /etc/archboot/run/autorun.sh ]]; then
-        echo "Waiting for pacman keyring..."
-        _pacman_keyring
-        echo "Updating pacman keyring..."
-        pacman -Sy --noconfirm "${_KEYRING[@]}" &>"${_LOG}"
-        chmod 755 /etc/archboot/run/autorun.sh
-        echo "Running custom autorun.sh..."
-        /etc/archboot/run/./autorun.sh
-        echo "Finished autorun.sh."
-        echo
-        echo "Relogin on tty1 in 5 seconds..."
-        sleep 5
-        exit
+        # don't run on pre environment
+        if [[ -e "${_LOCAL_DB}" ]] && ! [[ -e /.autorun ]]; then
+            : > /.autorun
+        else
+            echo "Waiting for pacman keyring..."
+            _pacman_keyring
+            echo "Updating pacman keyring..."
+            pacman -Sy --noconfirm "${_KEYRING[@]}" &>"${_LOG}"
+            chmod 755 /etc/archboot/run/autorun.sh
+            echo "Running custom autorun.sh..."
+            /etc/archboot/run/./autorun.sh
+            echo "Finished autorun.sh."
+            echo
+            echo "Relogin on tty1 in 5 seconds..."
+            sleep 5
+            exit
+        fi
     fi
 }
 
